--- a/FarmerVarmer/web/contact.html
+++ b/FarmerVarmer/web/contact.html
@@ -43,10 +43,10 @@ input[type=submit]:hover {
 <div class="container">
     <form action="contact.jsp" method="post">
     <label for="fname">Name</label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
+    <input type="text" id="name" name="name" placeholder="Name..">
 
     <label for="lname">E-mail</label>
-    <input type="text" id="email" name="email" placeholder="Your E-mail">
+    <input type="text" id="email" name="email" placeholder="E-mail">
 
     <label for="country">Country</label>
     <select id="country" name="country">
